# api/vgsocket/gen-server/restapi/operations/block_config.go
@@ -1,0 +1,137 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the generate command
+
+import (
+	"context"
+	"net/http"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime/middleware"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+
+	"github.com/vpngen/dc-mgmt/api/vgsocket/gen-server/models"
+)
+
+// BlockConfigHandlerFunc turns a function with the right signature into a block config handler
+type BlockConfigHandlerFunc func(BlockConfigParams, *models.Principal) middleware.Responder
+
+// Handle executing the request and returning a response
+func (fn BlockConfigHandlerFunc) Handle(params BlockConfigParams, principal *models.Principal) middleware.Responder {
+	return fn(params, principal)
+}
+
+// BlockConfigHandler interface for that can handle valid block config params
+type BlockConfigHandler interface {
+	Handle(BlockConfigParams, *models.Principal) middleware.Responder
+}
+
+// NewBlockConfig creates a new http.Handler for the block config operation
+func NewBlockConfig(ctx *middleware.Context, handler BlockConfigHandler) *BlockConfig {
+	return &BlockConfig{Context: ctx, Handler: handler}
+}
+
+/*
+	BlockConfig swagger:route PATCH /config/{config_id}/block blockConfig
+
+Block VPN config
+*/
+type BlockConfig struct {
+	Context *middleware.Context
+	Handler BlockConfigHandler
+}
+
+func (o *BlockConfig) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
+	route, rCtx, _ := o.Context.RouteInfo(r)
+	if rCtx != nil {
+		*r = *rCtx
+	}
+	var Params = NewBlockConfigParams()
+	uprinc, aCtx, err := o.Context.Authorize(r, route)
+	if err != nil {
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+	if aCtx != nil {
+		*r = *aCtx
+	}
+	var principal *models.Principal
+	if uprinc != nil {
+		principal = uprinc.(*models.Principal) // this is really a models.Principal, I promise
+	}
+
+	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+
+	res := o.Handler.Handle(Params, principal) // actually handle the request
+	o.Context.Respond(rw, r, route.Produces, route, res)
+
+}
+
+// BlockConfigBody block config body
+//
+// swagger:model BlockConfigBody
+type BlockConfigBody struct {
+
+	// Brigade ID
+	// Required: true
+	// Format: uuid
+	BrigadeID *strfmt.UUID `json:"brigade_id"`
+}
+
+// Validate validates this block config body
+func (o *BlockConfigBody) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := o.validateBrigadeID(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (o *BlockConfigBody) validateBrigadeID(formats strfmt.Registry) error {
+
+	if err := validate.Required("body"+"."+"brigade_id", "body", o.BrigadeID); err != nil {
+		return err
+	}
+
+	if err := validate.FormatOf("body"+"."+"brigade_id", "body", "uuid", o.BrigadeID.String(), formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validates this block config body based on context it is used
+func (o *BlockConfigBody) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (o *BlockConfigBody) MarshalBinary() ([]byte, error) {
+	if o == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(o)
+}
+
+// UnmarshalBinary interface implementation
+func (o *BlockConfigBody) UnmarshalBinary(b []byte) error {
+	var res BlockConfigBody
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*o = res
+	return nil
+}
