# api/vgsocket/gen-server/restapi/operations/block_config_parameters.go
@@ -1,0 +1,107 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"io"
+	"net/http"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime"
+	"github.com/go-openapi/runtime/middleware"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/validate"
+)
+
+// NewBlockConfigParams creates a new BlockConfigParams object
+//
+// There are no default values defined in the spec.
+func NewBlockConfigParams() BlockConfigParams {
+
+	return BlockConfigParams{}
+}
+
+// BlockConfigParams contains all the bound params for the block config operation
+// typically these are obtained from a http.Request
+//
+// swagger:parameters blockConfig
+type BlockConfigParams struct {
+
+	// HTTP Request Object
+	HTTPRequest *http.Request `json:"-"`
+
+	/*Brigade ID
+	  Required: true
+	  In: body
+	*/
+	Body BlockConfigBody
+	/*Config ID
+	  Required: true
+	  In: path
+	*/
+	ConfigID string
+}
+
+// BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
+// for simple values it will use straight method calls.
+//
+// To ensure default values, the struct must have been initialized with NewBlockConfigParams() beforehand.
+func (o *BlockConfigParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+	var res []error
+
+	o.HTTPRequest = r
+
+	if runtime.HasBody(r) {
+		defer r.Body.Close()
+		var body BlockConfigBody
+		if err := route.Consumer.Consume(r.Body, &body); err != nil {
+			if err == io.EOF {
+				res = append(res, errors.Required("body", "body", ""))
+			} else {
+				res = append(res, errors.NewParseError("body", "body", "", err))
+			}
+		} else {
+			// validate body object
+			if err := body.Validate(route.Formats); err != nil {
+				res = append(res, err)
+			}
+
+			ctx := validate.WithOperationRequest(r.Context())
+			if err := body.ContextValidate(ctx, route.Formats); err != nil {
+				res = append(res, err)
+			}
+
+			if len(res) == 0 {
+				o.Body = body
+			}
+		}
+	} else {
+		res = append(res, errors.Required("body", "body", ""))
+	}
+
+	rConfigID, rhkConfigID, _ := route.Params.GetOK("config_id")
+	if err := o.bindConfigID(rConfigID, rhkConfigID, route.Formats); err != nil {
+		res = append(res, err)
+	}
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// bindConfigID binds and validates parameter ConfigID from path.
+func (o *BlockConfigParams) bindConfigID(rawData []string, hasKey bool, formats strfmt.Registry) error {
+	var raw string
+	if len(rawData) > 0 {
+		raw = rawData[len(rawData)-1]
+	}
+
+	// Required: true
+	// Parameter is provided by construction from the route
+	o.ConfigID = raw
+
+	return nil
+}
